--- a/src/views/App/index.module.scss
+++ b/src/views/App/index.module.scss
@@ -1,6 +1,7 @@
 .article {
   background: #fff;
-  min-width: 600px;
+  width: 100%;
+  max-width: 600px;
   border-radius: 20px;
   padding: 20px 55px;
   &Title {
