--- a/src/views/styles/common.scss
+++ b/src/views/styles/common.scss
@@ -1,12 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=Roboto:wght@400;500&display=swap');
 
+html,
 body {
-    font: 16px/1.4 'Roboto', sans-serif;
-    background: #3F72AF;
-    min-height: 100vh;
-    padding: 1rem;
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  overflow-x: hidden;
+}
+
+body {
+  font: 16px/1.4 'Roboto', sans-serif;
+  background: #3f72af;
+  min-height: 100vh;
+  padding: 1rem;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#root {
+  width: 90%;
+  display: flex;
+  justify-content: center;
 }
