--- a/src/views/styles/common.scss
+++ b/src/views/styles/common.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=Roboto:wght@400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=Roboto:wght@400;500&display=swap");
 
 html,
 body {
@@ -6,7 +6,7 @@ body {
 }
 
 body {
-  font: 16px/1.4 'Roboto', sans-serif;
+  font: 16px/1.4 "Roboto", sans-serif;
   background: #3f72af;
   min-height: 100vh;
   padding: 1rem;
