--- a/src/views/components/InputPlus/index.module.scss
+++ b/src/views/components/InputPlus/index.module.scss
@@ -9,7 +9,7 @@
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
     padding: 9px 10px;
-    font: 1rem/1.4 'Roboto', sans-serif;
+    font: 1rem/1.4 "Roboto", sans-serif;
     background: #dbe2ef;
 
     &::placeholder {
@@ -23,7 +23,7 @@
     border-bottom-right-radius: 5px;
     border: none;
     cursor: pointer;
-    background: #3f72af url('./images/plus.svg') no-repeat center center;
+    background: #3f72af url("./images/plus.svg") no-repeat center center;
     transition: opacity 0.3s;
 
     &:hover {
